# ACP_PLUGIN_SDK

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
acp_cli/: __init__.py  builder.py  config.py  main.py
acp_cli/commands/: build.py  init_cmd.py  login.py  publish.py  validate.py
acp_plugin_sdk/: __init__.py  manifest.py  types.py  version.py
docs/: CLI_REFERENCE.md  DESIGN_SYSTEM_KIT.md  GETTING_STARTED.md  PLUGIN_BACKEND_API.md  PLUGIN_FRONTEND_API.md  PLUGIN_LIFECYCLE.md  PLUGIN_MANIFEST_SPEC.md  PLUGIN_SECURITY.md  SHARED_DEPS_CONTRACT.md
templates/basic/: manifest.json.j2
templates/basic/backend/: plugin.py.j2
templates/basic/frontend/: package.json.j2  vite.config.ts
templates/basic/frontend/src/: index.ts
