[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-plugin-sdk"
dynamic = ["version"]
description = "SDK and CLI tools for building ADMINCHAT Panel plugins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "NovaHelix", email = "dev@novahelix.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "httpx>=0.25",
    "jinja2>=3.0",
    "rich>=13.0",
]

[project.scripts]
acp-cli = "acp_cli.main:cli"

[project.urls]
Homepage = "https://github.com/fxxkrlab/acp-plugin-sdk"
Documentation = "https://github.com/fxxkrlab/acp-plugin-sdk/tree/main/docs"
Repository = "https://github.com/fxxkrlab/acp-plugin-sdk"

[tool.hatch.version]
path = "acp_plugin_sdk/version.py"

[tool.hatch.build.targets.wheel]
packages = ["acp_plugin_sdk", "acp_cli", "templates"]

[tool.hatch.build.targets.sdist]
include = ["acp_plugin_sdk", "acp_cli", "templates"]
